# supplyHaskellFFIWithNixsCMake

./: CMakeLists.txt  CMakeLists.txt~  default.nix  default.nix~  readme.md  result
src/: Message.c  Message.h  hello-world.c
